--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 
     <script src="./data/users.js"></script>
     <script src="./main.js"></script>
+    <script src="./coin.js"></script>
+
 </body>
 </html>
